# libsignon-glib

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile.am  NEWS  README.md  configure.ac  libsignon-glib.pc.in  meson.build  meson_options.txt
build-aux/: gen-error-map.py
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  gir1.2-signon-2.0.install  libsignon-glib-dev.install  libsignon-glib2.symbols  rules
docs/reference/: libsignon-glib-docs.xml  libsignon-glib-sections.txt  meson.build  migrating-1to2.xml
libsignon-glib/: Makefile.am  Signon-1.0.metadata  com.google.code.AccountsSSO.SingleSignOn.AuthService.xml  libsignon-glib.map  meson.build  signon-auth-service.c  signon-auth-service.h  signon-auth-session.c  signon-auth-session.h  signon-enum-types.c  signon-errors-enum.c  signon-errors-map.c  signon-errors.c  signon-glib.h  signon-identity-info.c  signon-identity-info.h  signon-identity.c  signon-identity.h  signon-internals.h  signon-marshal.c  signon-marshal.h  signon-security-context.c  signon-security-context.h  sso-auth-service-gen-doc-com.google.code.AccountsSSO.gSingleSignOn.AuthService.xml  sso-auth-service-gen.c  sso-auth-service-gen.h  sso-auth-service.c  sso-auth-session-gen-doc-com.google.code.AccountsSSO.gSingleSignOn.AuthSession.xml  sso-auth-session-gen.c  sso-auth-session-gen.h  sso-identity-gen-doc-com.google.code.AccountsSSO.gSingleSignOn.Identity.xml  sso-identity-gen.c  sso-identity-gen.h
packaging/: libsignon-glib.spec
pygobject/: meson.build
tests/: check_signon.c  meson.build  signon-glib-test.sh
